refactor: apply feedbacks